# sfinder-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  double.cpp  double.hpp  main.cpp  sample.cpp  sample.hpp  triple.cpp  triple.hpp
src/core/: bits.cpp  bits.hpp  factory.cpp  factory.hpp  field.cpp  field.hpp  move.cpp  move.hpp  moves.cpp  moves.hpp  piece.cpp  piece.hpp  pieces.cpp  pieces.hpp  srs.cpp  srs.hpp  templates.hpp  types.hpp
src/finder/: concurrent_perfect_clear.hpp  cycle.cpp  cycle.hpp  lookup.cpp  lookup.hpp  marker.cpp  marker.hpp  percentage.cpp  percentage.hpp  perfect.cpp  perfect.hpp  perfect_clear.cpp  perfect_clear.hpp  permutation.cpp  permutation.hpp  permutations.cpp  permutations.hpp  ren.cpp  ren.hpp  spins.cpp  spins.hpp  thread_pool.hpp  two_lines_pc.cpp  two_lines_pc.hpp  types.hpp
src/finder/perfect_clear/: comparators.hpp  finder.hpp  full_finder.hpp
src/fumen/: color_field.cpp  color_field.hpp  parser.cpp  parser.hpp
src/nn/: activations.hpp  main.cpp  perceptron.hpp
src/sfinder/: combinations.hpp  lookup.cpp  lookup.hpp  marker.cpp  marker.hpp  percentage.cpp  percentage.hpp  permutations.cpp  permutations.hpp  spins.cpp  spins.hpp  types.hpp
src/sfinder/all_pcs/: frontier.hpp  minos.hpp  types.hpp
src/sfinder/perfect_clear/: checker.hpp  full_finder.cpp  full_finder.hpp  spins.hpp  types.hpp
test/: CMakeLists.txt  main.cpp  test.cpp  test_field.cpp  test_piece.cpp
test/core/: test_bits.cpp  test_factory.cpp  test_field.cpp  test_move.cpp  test_moves.cpp  test_perfect.cpp  test_piece.cpp  test_pieces.cpp  test_srs_srsplus.cpp
test/finder/: test_concurrent_perfect_clear.cpp  test_cycle.cpp  test_lookup.cpp  test_marker.cpp  test_percentage.cpp  test_perfect.cpp  test_perfect_clear.cpp  test_permutations.cpp  test_ren.cpp  test_spins.cpp  test_thread_pool.cpp  test_two_lines_pc.cpp
test/finder/perfect_clear/: test_finder.cpp  test_full_finder.cpp
test/fumen/: test_color_field.cpp
test/nn/: test_main.cpp  test_nn.cpp
test/sfinder/: test_combinations.cpp  test_lookup.cpp  test_marker.cpp  test_percentage.cpp  test_permutations.cpp  test_reverse_search.cpp  test_sample.cpp
test/sfinder/all_pcs/: test_frontier.cpp  test_minos.cpp
test/sfinder/perfect_clear/: test_checker.cpp  test_full_finder.cpp  test_perfect_clear.cpp  test_spins.cpp
